--- a/Rocket.toml
+++ b/Rocket.toml
@@ -1,3 +1,3 @@
 [global.databases]
-census_geoms  = {url = "postgresql://census:census@localhost/census"}
+database= {url = "postgresql://census:census@localhost/census"}
 
